fix whitespace from thumb

--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -106,7 +106,7 @@
 }
 .tiny {
   filter: blur(10px);
-  transform: scale(1.1, 0.96);
+  transform: scale(1, 0.96);
   transition: visibility 0ms ease 400ms;
 }
 
